[package]
name = "piz"
version = "0.1.0"
edition = "2018"
authors = ["Matt Kline <matt@bitbashing.io>"]
license = "Zlib"
repository = "https://github.com/mrkline/piz-rs"
readme = "../README.md"
documentation = "https://docs.rs/piz"
description = """
piz (a Parallel Implementation of Zip)
is a ZIP archive reader designed to concurrently decompress files
using a simple API.
"""
keywords = ["zip", "archive", "parallel", "thread", "concurrency"]
categories = ["compression", "concurrency"]

[dependencies]
codepage-437 = "0.1"
crc32fast = "1.0"
flate2 = "1.0"
log = "0.4"
thiserror = "1.0"
twoway = "0.2"
