[package]
name = "test_suite"
version = "0.1.0"
authors = ["Matt Kline <matt@bitbashing.io>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
memmap = "0.7"
log = "0.4"
stderrlog = "0.4"
structopt = "~0.3.9"
piz = { path = "../piz" }
rayon = "1.0"
