[package]
name = "test_suite"
version = "0.0.0"
authors = ["Matt Kline <matt@bitbashing.io>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
memmap = "0.7"
stderrlog = "0.4"
piz = { path = "../piz" }
